...
                android:text="@string/task_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_title"
                style="@style/WorkoutTextStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/create_task_round_editor"
...
                android:id="@+id/recycler_module"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/edit_module"
                app:layout_constraintEnd_toStartOf="@+id/button_close"
                app:layout_constraintStart_toStartOf="@+id/edit_module"
                app:tags="@{viewModel.moduleNameList}" />

            <EditText
                android:id="@+id/edit_module"
...
                android:maxLength="6"
                android:singleLine="true"
                android:text="@={viewModel.newModule}"
                android:textAlignment="center"
                android:visibility="@{viewModel.moduleNameList.size()&lt;6? View.VISIBLE:View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/module_task"
                app:layout_constraintEnd_toStartOf="@+id/button_module_add"
                app:layout_constraintStart_toEndOf="@+id/module_task"
                app:layout_constraintTop_toTopOf="@+id/module_task" />

            <ImageButton
                android:id="@+id/button_module_add"
                android:layout_width="@dimen/size_small"
...
                android:text="@string/task_count"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_end_date" />

            <EditText
                android:id="@+id/edit_task_amount_editor"
                style="@style/WorkoutTextStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/create_task_round_editor"
                android:fontFamily="@font/noto_sans"
...
                android:onClick="@{() -> viewModel.decreaseAmount()}"
                app:layout_constraintBottom_toBottomOf="@+id/text_count"
                app:layout_constraintEnd_toStartOf="@+id/button_time_increase"
                app:layout_constraintTop_toTopOf="@+id/text_count" />

            <Button
                android:id="@+id/button_create"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
...
