...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loggo" />

        <Button
            android:id="@+id/button_facebook_login"
            style="@style/WorkoutTextStyle"
            android:layout_width="180dp"
            android:layout_marginTop="90dp"
            android:ellipsize="marquee"
            android:background="@drawable/login_buttom_layout"
            android:onClick="@{()->viewModel.loginFacebook()}"
...
