...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_power1"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/battery_low" />

            <ImageButton
                android:id="@+id/button_power3"
                android:layout_width="36dp"
                android:layout_height="0dp"
                android:visibility="@{(viewModel.task.goalCount-viewModel.task.accumCount&lt;3)?View.INVISIBLE:View.VISIBLE}"
                android:background="@{(viewModel.workout.planSectionCount&lt;3)?@drawable/battery_low:@drawable/battery_high}"
                android:onClick="@{()-> viewModel.onSetWorkoutTime(3)}"
                app:layoutMarginStart="@{(viewModel.workout.planSectionCount&lt;3)?@dimen/battery_margin:@dimen/battery_margin_null}"
...
